--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 						<div class="nav-item" onclick="openInternal('websites.html')" hidden><span>Websites</span></div>
 						<div class="nav-item active" onclick="openInternal('contact.html')"><span>Contact</span></div>
 
-						<div class="nav-item" onclick="openExternal('https://sakura-sedaia.carrd.co/',1)">Commissions</div>
+						<div class="nav-item" onclick="openExternal('https://sakura-sedaia.carrd.co/')">Commissions</div>
 					</div>
 				</div>
 			</div>
