--- a/rigs.html
+++ b/rigs.html
@@ -37,7 +37,7 @@
 						<div class="nav-item" onclick="openInternal('websites.html')" hidden><span>Websites</span></div>
 						<div class="nav-item" onclick="openInternal('contact.html')"><span>Contact</span></div>
 
-						<div class="nav-item" onclick="openExternal('https://sakura-sedaia.carrd.co/',1)">Commissions
+						<div class="nav-item" onclick="openExternal('https://sakura-sedaia.carrd.co/')">Commissions
 						</div>
 					</div>
 				</div>
