--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="nav-item" onclick="openInternal('websites.html')" hidden><span>Websites</span></div>
             <div class="nav-item" onclick="openInternal('contact.html')"><span>Contact</span></div>
 
-            <div class="nav-item" onclick="openExternal('https://sakura-sedaia.carrd.co/',1)">Commissions</div>
+            <div class="nav-item" onclick="openExternal('https://sakura-sedaia.carrd.co/')"><span>Commissions</span></div>
           </div>
         </div>
       </div>
