Finalized SACR E7 Update

--- a/rigs.html
+++ b/rigs.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<title>Rig Catalog | Sakura Sedaia</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
-
 	<link rel="stylesheet" href="assets/styles/main-style.css">
 </head>
-
 <body>
-
 	<!-- HEAD START -->
 	<div class="header" style="background-image: url('assets/images/Waterfall Valley.png');background-position: bottom">
 		<div class="header-pattern">
@@ -45,7 +41,6 @@
 		</div>
 	</div>
 	<!-- HEAD END -->
-
 	<!-- Featured Rig Start -->
 	<div class="body-container">
 		<div class="featured-rig" style="background-image:url('assets/images/BannerRender.png')">
@@ -53,7 +48,6 @@
 				<div class="title">
 					<h1>Sakura's Advanced Character Rig</h1>
 				</div>
-
 				<div class="download-rigs">
 					<div class="col" id="stableRig">
 						<h2>Stable Build</h2>
@@ -70,12 +64,11 @@
 						</p>
 
 						<div class="download-rig">
-							<div class="downloadDetail">Blender 2.93 | 0.97mb </div>
+							<div class="downloadDetail">Blender 2.93 | 0.97mb | Zip Archive</div>
 							<br>
 							<div class="download-btn" onclick="downloadSACR('SACR_R6.zip')">Download</div>
 						</div>
 					</div>
-
 					<div class="col" id="devRig">
 						<h2>Experimental Release</h2>
 						<h3>Revision 7 Development</h3>
@@ -90,9 +83,9 @@
 						</p>
 
 						<div class="download-rig">
-							<div class="downloadDetail">Blender 4.1 | 6.23mb </div>
+							<div class="downloadDetail" onclick="openMarkdown('SACR E7 Changelog.md')">Blender 4.1 | 1.06mb | Zip Archive</div>
 							<br>
-							<div class="download-btn download-btn-red" onclick="downloadSACR('SACR E7_Proto2.blend', 1)">Download</div>
+							<div class="download-btn download-btn-red" onclick="downloadSACR('SACR E7_Proto2.zip', 1)">Download</div>
 						</div>
 					</div>
 				</div>
@@ -100,8 +93,6 @@
 		</div>
 	</div>
 	<!-- Featured Rig End -->
-
-
 	<!-- FOOT BEGIN -->
 	<div class="footer">
 		<div class="clusterfuck">
@@ -125,15 +116,9 @@
 			<div class="trademarks">
 				<div>&copy; 2024 Sakura Sedaia, All Rights Reserved</div>
 			</div>
-
 		</div>
 	</div>
 	<!-- FOOT END -->
-
 	<script src="assets/scripts/script.js"></script>
-	<script>
-	</script>
-
 </body>
-
 </html>
