--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,7 @@
 				<div onclick="openExternal('https://youtube.com/c/SakuraSedaia')"><span>Youtube</span></div>
 				<div onclick="openExternal('https://www.deviantart.com/')"><span>DeviantArt</span></div>
 				<div onclick="openExtennal('https://codepen.io/Sakura-Sedaia')"><span>Codepen</span></div>
+				<div onclick="openExtennal('https://github.com/SakuraSedaia')"><span>Github</span></div>
 				<div>
 					<h4><span>External API's</span></h4>
 					<div onclick="openExternal('https://fonts.google.com/')"><span>Google Fonts</span></div>
