Updated Experimental R7 to Proto 4

--- a/rigs.html
+++ b/rigs.html
@@ -85,10 +85,11 @@
 							Expected Full Release: July 2024
 						</p>
 						<div class="download-rig">
-							<div class="downloadDetail" onclick="openMarkdown('SACR E7 Changelog.md')">Blender 4.0 |
-								0.98mb | Zip Archive</div>
+							<div class="downloadDetail link" onclick="openMarkdown('SACR E7 Changelog.html')">Blender
+								4.1 |
+								1.03mb | Zip Archive</div>
 							<br>
-							<div class="download-btn download-btn-red" onclick="downloadSACR('SACR E7_Proto3.zip', 1)">
+							<div class="download-btn download-btn-red" onclick="downloadSACR('SACR E7_Proto4.zip', 1)">
 								Download</div>
 						</div>
 					</div>
