Added disclaimer to SACR R6

--- a/rigs.html
+++ b/rigs.html
@@ -64,6 +64,8 @@
 							prefer for your workflow and with it's optimized Material Setups and Mesh's, your Computer
 							won't
 							suffer near as much as competitors.
+
+							**NOTE** Shading and Some Rig Drivers break in Blender 4.0 and newer, use in these versions at your own risk
 						</p>
 
 						<div class="download-rig">
