--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,7 @@
 
 				<h4><span>External API's</span></h4>
 				<div onclick="openExternal('https://fonts.google.com/')"><span>Google Fonts</span></div>
+				<div onclick="openExternal('https://fontawesome.com/')"><span>Font Awesome</span></div>
 
 			</div>
 
