--- a/rigs.html
+++ b/rigs.html
@@ -172,6 +172,7 @@
 
 				<h4><span>External API's</span></h4>
 				<div onclick="openExternal('https://fonts.google.com/')"><span>Google Fonts</span></div>
+				<div onclick="openExternal('https://fontawesome.com/')"><span>Font Awesome</span></div>
 
 			</div>
 
