Updated SACR Promo Images
All SACR Logos added, and replaced old Text logos on the SACR Page

--- a/rigs.html
+++ b/rigs.html
@@ -15,7 +15,7 @@
 	</div>
 	<!-- HEAD START -->
 	<div class="header"
-		style="background-image: url('assets/images/render-gallery/gallery/CharEnvironment/NinoCyberheist-Jun2024.png');background-position: center center">
+		style="background-image: url('assets/images/render-gallery/gallery/CharEnvironment/SakuraATM9-Jul2024.png');background-position: center top">
 		<div class="header-pattern">
 			<div class="header-content">
 				<div class="header-top">
@@ -25,7 +25,7 @@
 				</div>
 				<br>
 				<div class="header-middle" style="background-color: rgba(65, 65, 65, 0.479);">
-					<h1>Sakura's Minecraft Rig</h1>
+					<img src="assets/images/sacr-logos/R7.1 Full.png" style="display: inline-block;" width="100%">
 				</div>
 				<br>
 				<div class="header-bottom">
@@ -59,13 +59,15 @@
 					</p>
 				</div>
 				<div class="sacr-thumbnail">
-					<img src="assets/images/render-gallery/gallery/CharEnvironment/SakuraATM9-Jul2024.png">
+					<img src="assets/images/rig-previews/SACR/sacr_r7.1_promo.png">
 				</div>
 			</div>
 			<div class="download-rig"> <!-- Revision 7.1 -->
 				<div class="dl-heading">
 					<h3>
-						<span>Revision 7.1</span>
+						<span>
+							<img src="assets/images/sacr-logos/R7.1 Full.png" style="display: inline-block;"
+								width="100%" class="rig-version-title"></span>
 					</h3>
 					<p>
 						Revision 7 contains many improvements and changes over it's predecessor, Revision 6. These
@@ -99,7 +101,9 @@
 			<div class="download-rig"> <!-- Revision 6 -->
 				<div class="dl-heading">
 					<h3>
-						<span>Revision 6.1</span>
+						<span>
+							<img src="assets/images/sacr-logos/R6.1 Full.png" style="display: inline-block;"
+								width="100%" class="rig-version-title"></span>
 					</h3>
 					<p>
 						SACR R6, released 2 years ago on Blender 2.93 has recieved a minor refresh to clean up two main
@@ -134,10 +138,13 @@
 			<div class="download-rig"> <!-- Experimental -->
 				<div class="dl-heading">
 					<h3>
-						<span>Experimental 7.2</span>
+						<span>
+							<img src="assets/images/sacr-logos/E7.2 Full.png" style="display: inline-block;"
+								width="100%" class="rig-version-title"></span>
 					</h3>
 					<p>
-						SACR E7.2 is a minor version update to R7, including a handful of fixes as well as updating some systems of the rig. A full list of changes is provided on the download page for the rig itself.
+						SACR E7.2 is a minor version update to R7, including a handful of fixes as well as updating some
+						systems of the rig. A full list of changes is provided on the download page for the rig itself.
 					</p>
 				</div>
 				<div class="info">
