--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
 				</div>
 				<div class="navigation">
 					<div class="nav-content">
-						<div class="nav-item active" onclick="openInternal('index.html')"><span>About</span></div>
+						<div class="nav-item" onclick="openInternal('index.html')"><span>About</span></div>
 						<div class="nav-item" onclick="openInternal('rigs.html')"><span>SACR</span></div>
-						<div class="nav-item" onclick="openInternal('contact.html')"><span>Contact</span></div>
-						<div class="nav-item" onclick="openExternal('https://sakura-sedaia.carrd.co/')"><span>Commissions</span></div>
+						<div class="nav-item active" onclick="openInternal('contact.html')"><span>Contact</span></div>
+						<div class="nav-item " onclick="openExternal('https://sakura-sedaia.carrd.co/')"><span>Commissions</span></div>
 					</div>
 				</div>
 			</div>
