--- a/rigs.html
+++ b/rigs.html
@@ -11,7 +11,8 @@
 
 <body>
 	<div class="exp-update-alert">
-		<h2>ATTENTION: SACR has recieved a new update: Alpha 2 of Revision 7.2 has been released for download!</h2>
+		<h2>ATTENTION: SACR has recieved a new update: Revision 7.2.1 along with a new Control Addon is available for
+			download!</h2>
 	</div>
 	<!-- HEAD START -->
 	<div class="header"
@@ -25,7 +26,7 @@
 				</div>
 				<br>
 				<div class="header-middle" style="background-color: rgba(65, 65, 65, 0.479);">
-					<img src="assets/images/sacr-logos/R7.1 Full.png" style="display: inline-block;" width="100%">
+					<img src="assets/images/rig_logos/SACR/R7.2 Full.png" style="display: inline-block;" width="100%">
 				</div>
 				<br>
 				<div class="header-bottom">
@@ -54,19 +55,27 @@
 					<h2>What is SACR?</h2>
 					<p>
 						Quite simply, SACR is a rig developed by Sakura for use in Blender in the creation of Minecraft
-						Character based renders with a huge emphasis on a large feature package without the performance
-						drawback typically associated with having all of those features.
+						Character based renders with a huge emphasis on a comprehensive feature package that is light on
+						the system and easy to use.
+					</p>
+					<h2>Support Server</h2>
+					<p>
+						Should you need help or assistance with SACR, you can contact Sakura directly through the SACR
+						Support server.
+					<div class="link-contain" style="display: inline-block;">
+						<div>Support Discord Server</div>
+					</div>
 					</p>
 				</div>
 				<div class="sacr-thumbnail">
 					<img src="assets/images/rig-previews/SACR/sacr_r7.2_promo.png">
 				</div>
 			</div>
-			<div class="download-rig"> <!-- Revision 7.1 -->
+			<div class="download-rig"> <!-- Revision 7.2 -->
 				<div class="dl-heading">
 					<h3>
 						<span>
-							<img src="assets/images/sacr-logos/R7.2 Full.png" style="display: inline-block;"
+							<img src="assets/images/rig_logos/SACR/R7.2 Full.png" style="display: inline-block;"
 								width="100%" class="rig-version-title"></span>
 					</h3>
 					<p>
@@ -76,6 +85,11 @@
 						SACR back to it's roots as an Advanced yet Lightweight Rig that can be used by anyone and
 						everyone, no matter what PC Specs you have.
 					</p>
+					<h3>Version Specific</h3>
+					<p>
+						SACR R7.2 released with a lot of issues and bugs, 7.2.1 is a hotfix update meant to remedy those
+						issues and add crucial identifiers for use with the new Control Addon
+					</p>
 				</div>
 				<div class="info">
 					<span>
@@ -84,34 +98,35 @@
 				</div>
 				<div class="download">
 					<div class="link-contain">
-						<div onclick="openSACR('R7.2.0')">
+						<div onclick="openSACR('R', '7.2.1', 'local')">
 							<a class="download-text">
-								<span><svg height="16" xmlns="http://www.w3.org/2000/svg"
-										viewBox="0 0 496 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-										<path
-											d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
-									</svg></span>
-								Download R7.2
+								Download R7.2.1 Standard
+							</a>
+						</div>
+
+						<div onclick="openSACR('R', '7.2.1', 'local', 'Lite')">
+							<a class="download-text">
+								Download R7.2.1 Lite
 							</a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<hr data-line="4" class="code-line" dir="auto" />
-			<div class="download-rig"> <!-- Revision 6 -->
+
+			<div class="download-rig"> <!-- SACR Control Script -->
 				<div class="dl-heading">
 					<h3>
 						<span>
-							<img src="assets/images/sacr-logos/R6.1 Full.png" style="display: inline-block;"
+							<img src="assets/images/rig_logos/Rig GUI/Rig_GUI_V1.0.png" style="display: inline-block;"
 								width="100%" class="rig-version-title"></span>
 					</h3>
 					<p>
-						SACR R6, released 2 years ago on Blender 2.93 has recieved a minor refresh to clean up two main
-						issues present on the rig for Blender 3.3, being non-functional materials and extreme lag. SACR
-						R6.1
-						is still offered as Blender 3.6 changed the file structure of blender save files (.blend),
-						making it
-						impossible to open or append newer rigs such as SACR R7 in versions older than Blender 3.6.
+						Alongside the development of SACR R7.2.1, a new control script has been developed in addon form,
+						this control script will be continuously updated as new versions of SACR Come out, with plans
+						for Revision 8 to rely almost exclusively on an addon for all controls, though I will do my best
+						to ensure all old versions of the script are still available for use within Blender while each
+						is compatible. The current UI version only supports R7.2.1 at this time,
 					</p>
 				</div>
 				<div class="info">
@@ -121,14 +136,15 @@
 				</div>
 				<div class="download">
 					<div class="link-contain">
-						<div onclick="openSACR('R6.1')">
+						<div onclick="openAddon('SACR_GUI_V1.0.0','local')">
 							<a class="download-text">
-								<span><svg height="16" xmlns="http://www.w3.org/2000/svg"
-										viewBox="0 0 496 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-										<path
-											d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
-									</svg></span>
-								Download R6.1
+								Direct Download
+							</a>
+						</div>
+
+						<div onclick="openAddon('SACR_GUI_V1.0.0','blend')" hidden>
+							<a class="download-text">
+								Blender Extensions
 							</a>
 						</div>
 					</div>
@@ -143,7 +159,7 @@
 								width="100%" class="rig-version-title"></span>
 					</h3>
 					<p>
-						
+
 					</p>
 				</div>
 				<div class="info">
